//////////////////////////////////////////////////////
// ⚙️  DATABASE SCHEMA PURPOSE
//////////////////////////////////////////////////////

/*
This file has two main roles:

1) Structure Definition
It defines the database tables, fields, and relationships.
It helps with fast modeling and gives AI a clear reference
to assist in generating modules, migrations, and future updates.

2) Documentation Layer
It serves as clean documentation for the database design.
It provides a clear and organized view of how entities relate,
making collaboration easier and development more efficient.

In short:
This file is both the architectural blueprint and
the single source of truth for the data model.
*/
//////////////////////////////////////////////////////

Table users {
  id bigint [pk, increment]
  uuid varchar(36) [unique, not null, note: 'UUID for public reference']
  email varchar(255) [unique, not null]
  password varchar(255) [not null, note: 'Hashed password for JWT authentication']
  created_at timestamp
  updated_at timestamp
  
  indexes {
    email
  }
}

Table password_reset_tokens {
  email varchar(255) [pk]
  token varchar(255) [not null]
  created_at timestamp [null]
}

Table files {
  id bigint [pk, increment]
  uuid varchar(36) [unique, not null, note: 'Unique identifier for the file']
  name varchar(255) [not null, note: 'Stored filename']
  original_name varchar(255) [not null, note: 'Original filename from upload']
  size bigint [not null, note: 'File size in bytes']
  mime_type varchar(100) [null, note: 'File MIME type for type validation']
  extension varchar(20) [null, note: 'File extension']
  path varchar(500) [not null, note: 'Storage path or file location']
  owner_uuid varchar(36) [ref: > users.uuid, not null, note: 'Reference to user UUID for ownership'] 
  upload_date timestamp [not null, note: 'Upload completion date']
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp [null, note: 'Soft delete support']
  
  indexes {
    owner_uuid
    upload_date
    mime_type
  }
}

Table file_chunks {
  id bigint [pk, increment]
  upload_id varchar(255) [unique, not null, note: 'Unique identifier for chunked upload session']
  original_name varchar(255) [not null, note: 'Original filename']
  total_size bigint [not null, note: 'Total file size']
  total_chunks int [not null, note: 'Total number of chunks']
  uploaded_chunks int [not null, default: 0, note: 'Number of chunks uploaded']
  mime_type varchar(100) [null]
  owner_uuid varchar(36) [ref: > users.uuid, not null]
  chunk_paths json [null, note: 'Paths to uploaded chunks']
  expires_at timestamp [not null, note: 'Expiration time for incomplete uploads']
  created_at timestamp
  updated_at timestamp
  
  indexes {
    upload_id
    owner_uuid
    expires_at
  }
}

Table file_activity_logs {
  id bigint [pk, increment]
  file_uuid varchar(36) [ref: > files.uuid, not null]
  user_id bigint [ref: > users.id, not null]
  action varchar(50) [not null, note: 'upload, download, delete']
  ip_address varchar(45) [null]
  user_agent varchar(500) [null]
  created_at timestamp
  
  indexes {
    file_uuid
    user_id
    action
    created_at
  }
}